added TODO to backtrader_InProgress

--- a/notebooks/backtrader_InProgress.ipynb
+++ b/notebooks/backtrader_InProgress.ipynb
@@ -6,6 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: fix selling over multiple orders, should sell entire holdings in one order\n",
+    "# TODO: Determine position size: Dollar Volatility = N × Dollars per Point. Unit = 1% of porfolio / Dollar Volatility\n",
+    "# TODO: Reduce trading size when account amount decreases (10% overall decrease -> 20% trading amount decrease), reinstate when back to initial starting amount\n",
+    "# TODO: Allow for both short and longs\n",
+    "# TODO: Implement System 2\n",
+    "# TODO: Ignoring breakouts (System 1) as previous one was a winner (regardless of long or short), failsafe is System 2 entry (System 2 does not have this breakout filter)\n",
+    "# Implemented: System 1 Longs, pyramiding up to 5 additional orders (1/2 N increments)\n",
+    "\n",
     "from __future__ import (absolute_import, division, print_function,\n",
     "                        unicode_literals)\n",
     "\n",
@@ -15,7 +23,6 @@
     "\n",
     "# Import the backtrader platform\n",
     "import backtrader as bt\n",
-    "\n",
     "\n",
     "# Create a Stratey\n",
     "class TestStrategy(bt.Strategy):\n",
@@ -127,6 +134,7 @@
     "            # Already in the market ... we might sell\n",
     "            if self.exit[-1] > self.dataclose[0]:\n",
     "                # SELL, SELL, SELL!!! (with all possible default parameters)\n",
+    "                # Below system low exit price\n",
     "                self.log('SELL CREATE, 10 day low: %.2f' % self.exit[-1])\n",
     "                self.log('exit low: %.2f' % self.dataclose[0])\n",
     "                # Keep track of the created order to avoid a 2nd order\n",
@@ -135,6 +143,7 @@
     "                self.selling = True\n",
     "                \n",
     "            elif self.dataclose[0] < (self.dataclose[-1]-2*self.atr[-1]):\n",
+    "                # Below 2N stop\n",
     "                stopPrice = self.dataclose[-1]-2*self.atr[-1]\n",
     "                self.log('SELL CREATE, N stop: %.2f' % stopPrice)\n",
     "                self.log('Current Price: %.2f' % self.dataclose[0])\n",
@@ -152,10 +161,9 @@
     "    # Add a strategy\n",
     "    cerebro.addstrategy(TestStrategy)\n",
     "\n",
-    "\n",
     "    # Create a Data Feed\n",
     "    data = bt.feeds.YahooFinanceCSVData(\n",
-    "        dataname='/Users/Ziyi/Downloads/AAPL.csv', \n",
+    "        dataname='/Users/Ziyi/Documents/backtrader/data/AAPL.csv', \n",
     "         fromdate=datetime.datetime(2019, 1, 1), \n",
     "         todate=datetime.datetime(2019, 12, 31),\n",
     "        reverse=False)\n",
